<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageDW"
        android:layout_width="194dp"
        android:layout_height="149dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/maxresdefault" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="143dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <RadioGroup
        android:layout_width="191dp"
        android:layout_height="43dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <RadioButton
            android:id="@+id/rbSerie"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/rbSerie"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rbPelicula"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/rbPelicula"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/CFiccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CFiccion"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <CheckBox
        android:id="@+id/Humor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Humor"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintBottom_toTopOf="@+id/Amor"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/CFiccion" />

    <CheckBox
        android:id="@+id/Amor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Amor"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline8" />

    <CheckBox
        android:id="@+id/Thriller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Thriller"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <CheckBox
        android:id="@+id/Terror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Terror"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <CheckBox
        android:id="@+id/Infantil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Infantil"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline7" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="@string/Aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Introduzca Título"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>